--- a/frontend.html
+++ b/frontend.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <h1>Welcome to the GitHub Verification and Minting Site</h1>
+  <h2>YOUR GITHUB MUST BE AT LEAST A YEAR OLD FOR VERIFICATION!</h2>
 
   <!-- GitHub Login Button -->
   <button id="github-login">Login with GitHub</button>
